WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211924
Regression(
r261163
) Causes crashes on builds without libwebrtc.dylib
https://bugs.webkit.org/show_bug.cgi?id=211924
Summary
Regression(r261163) Causes crashes on builds without libwebrtc.dylib
Chris Dumez
Reported
2020-05-14 14:59:55 PDT
r261163
Causes crashes on builds without libwebrtc.dylib: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 dyld 0x000000010ce8040a __abort_with_payload + 10 1 dyld 0x000000010cea9206 abort_with_payload + 9 2 dyld 0x000000010ce2bbc1 dyld::halt(char const*) + 473 3 dyld 0x000000010ce2bceb dyld::fastBindLazySymbol(ImageLoader**, unsigned long) + 167 4 libdyld.dylib 0x000000010dd6bc26 dyld_stub_binder + 282 5 com.apple.WebKit 0x00000001076479f7 WebKit::NetworkProcessConnection::NetworkProcessConnection(IPC::Connection::Identifier, WebCore::HTTPCookieAcceptPolicy) + 161 6 com.apple.WebKit 0x000000010712c5b5 WebKit::WebProcess::ensureNetworkProcessConnection() + 363 7 com.apple.WebKit 0x00000001075fd695 WebKit::WebProcess::initializeWebProcess(WebKit::WebProcessCreationParameters&&) + 83 8 com.apple.WebKit 0x00000001077960a5 WebKit::WebProcess::didReceiveWebProcessMessage(IPC::Connection&, IPC::Decoder&) + 9913 9 com.apple.WebKit 0x000000010719f702 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) + 650 10 com.apple.WebKit 0x00000001071a1fb4 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_7, void>::call() + 214 11 com.apple.JavaScriptCore 0x000000011997b68d WTF::RunLoop::performWork() + 637 12 com.apple.JavaScriptCore 0x000000011997b87a WTF::RunLoop::performWork(void*) + 26
Attachments
Patch
(1.55 KB, patch)
2020-05-14 15:00 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-05-14 15:00:07 PDT
<
rdar://problem/63206792
>
Chris Dumez
Comment 2
2020-05-14 15:00:42 PDT
Created
attachment 399415
[details]
Patch
Chris Dumez
Comment 3
2020-05-14 16:18:56 PDT
Comment on
attachment 399415
[details]
Patch Clearing flags on attachment: 399415 Committed
r261719
: <
https://trac.webkit.org/changeset/261719
>
Chris Dumez
Comment 4
2020-05-14 16:18:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug