Cherry-pick r261719. rdar://problem/63278098

Regression(r261163) Causes crashes on builds without libwebrtc.dylib
    https://bugs.webkit.org/show_bug.cgi?id=211924
    <rdar://problem/63206792>

    Reviewed by Jer Noble.

    * WebProcess/Network/NetworkProcessConnection.cpp:
    (WebKit::NetworkProcessConnection::NetworkProcessConnection):

    Canonical link: https://commits.webkit.org/224814@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261719 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/224606.10@safari-610.1.13-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.13-branch@261748 268f45cc-cd09-0410-ab3c-d52691b4dbfc